--- a/package.json
+++ b/package.json
@@ -45,6 +45,14 @@
     ]
   },
   "devDependencies": {
-    "@types/react-stars": "^2.2.1"
+    "@types/react-stars": "^2.2.1",
+    "@typescript-eslint/eslint-plugin": "^5.59.11",
+    "@typescript-eslint/parser": "^5.59.11",
+    "eslint": "^8.42.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-unused-imports": "^2.0.0",
+    "prettier": "^2.8.8"
   }
 }
