--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-unused-imports": "^2.0.0",
     "prettier": "^2.8.8",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "^3.3.2",
+    "tailwindcss-animated": "^1.0.1"
   }
 }
